Fix new Java 9+ API usages in 3.3.2 for Java 8 target
Replace nullInputStream, List.of, and try-with-resources variable
usages introduced since 3.2.3 with Java 8 equivalents.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>